--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,62 +1,19 @@
-<%= javascript_include_tag 'event_show' %>
+<% content_for :page_scripts do %>
+  <%= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css', media: 'all' %>
+  <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js' %>
+  <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js' %>
+  <%= javascript_include_tag 'event_show' %>
+<% end %>
 
 <h1>Events</h1>
 
 <% if current_user&.like_lecturer? %>
-  <%= link_to 'New Event', new_event_path, class: 'ui button' %>
+  <%= link_to 'New Event', new_event_path, class: 'ui primary button' %>
+  <br />
+  <br />
 <% end %>
 
-<div class="ui link three doubling stackable cards">
-  <% @events.each do |event| %>
-    <div class="ui card">
-      <a class="content" onclick="showEventModal(<%= event.id %>)">
-        <div class="header ellipsis-overflow">
-          <% unless event.approved? %>
-            <div class="ui label">
-              Pending approval
-            </div>
-          <% end %>
-          <%= event.title %>
-        </div>
-        <div class="description ellipsis-overflow">
-          <div class="ui label">
-            <i class="calendar outline icon"></i>
-            <%= event.formatted_time_range %>
-          </div>
-          <br />
-          <div class="ui label" style="margin: 10px 0;">
-            <i class="map marker alternate icon"></i>
-            <%= event.location %>
-          </div>
-          <br />
-          <%= event.description %>
-        </div>
-      </a>
-      <% if current_user&.like_lecturer? %>
-      <div class="extra content">
-        <% if current_user&.admin? %>
-        <div class="ui three buttons">
-          <%= link_to 'Edit', edit_event_path(event), class: 'ui grey button' %>
-          <% if event.approved? %>
-            <%= link_to 'Unapprove', event_approve_path(event), method: :post,
-              data: { confirm: 'Are you sure you want to unapprove this event?' }, class: 'ui yellow button' %>
-          <% else %>
-            <%= link_to 'Approve', event_approve_path(event), method: :post, class: 'ui green button' %>
-          <% end %>
-          <%= link_to 'Destroy', event, method: :delete,
-            data: { confirm: 'Are you sure you want to delete this event?' }, class: 'ui red button' %>
-        </div>
-        <% elsif event.user == current_user %>
-          <div class="ui two buttons">
-            <%= link_to 'Edit', edit_event_path(event), class: 'ui grey button' %>
-            <%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }, class: 'ui red button' %>
-          </div>
-        <% end %>
-      </div>
-      <% end %>
-    </div>
-  <% end %>
-</div>
+<div id='calendar'></div>
 
 <div class="ui modal" id="event_modal">
   <div class="header" id="event_modal_header">Loading....</div>
