--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,6 +3,14 @@
   <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js' %>
   <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js' %>
   <%= javascript_include_tag 'event_show' %>
+
+  <style>
+    .fc-day-grid-container.fc-scroller {
+        height: auto !important;
+        overflow-y: auto;
+    }
+
+  </style>
 <% end %>
 
 <h1>Events</h1>
@@ -13,7 +21,7 @@
   <br />
 <% end %>
 
-<div id='calendar'></div>
+<div id="calendar"></div>
 
 <div class="ui modal" id="event_modal">
   <div class="header" id="event_modal_header">Loading....</div>
