--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <%= favicon_link_tag asset_path('favicon.png') %>
+
     <%= Gon::Base.render_data %>
     <%= stylesheet_link_tag    'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -15,14 +19,7 @@
   </head>
 
   <body>
-    <div class="ui menu">
-      <a href="/" class="header item">
-        UofTCodes
-      </a>
-      <a href="/" class="item">
-        Sign in
-      </a>
-    </div>
+    <%= render 'layouts/header' %>
 
     <div style="padding: 0 10% 0 10%">
       <% flash.each do |type, msg| %>
