--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         <% else %>
           <div class="ui info message">
         <% end %>
-          <i class="close icon"></i>
+          <i class="close icon" onclick="closeMessage(this);"></i>
           <div class="header">
               <%= msg %>
           </div>
