--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,40 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-    </style>
+    <meta name="viewport" content="width=device-width" />
+
+    <%= stylesheet_link_tag "foundation_emails" %>
   </head>
 
   <body>
-    <%= yield %>
+    <table class="body" data-made-with-foundation>
+      <tr>
+        <td class="center" align="center" valign="top">
+          <center>
+            <spacer size="16"></spacer>
+
+            <br />
+
+            <container class="header">
+              <row>
+                <columns>
+                  <h1 class="text-center">UofTCodes</h1>
+                </columns>
+              </row>
+            </container>
+
+            <%= yield %>
+
+            <br />
+
+            <center style="color: grey;">
+              If you wish to update your email preferences or stop receiving emails,
+              please <%= link_to 'update in your preferences', edit_user_registration_url %>.
+            </center>
+          </center>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
