--- a/app/views/homepage/homepage.html.erb
+++ b/app/views/homepage/homepage.html.erb
@@ -45,11 +45,23 @@
       <section class="upcoming-events">
         <div class="visual-anchor"></div>
         <h2> Upcoming Events </h2>
-        <% @events.each do |event| %>
-          Title: <%= event.title %>
-          Description: <%= event.description %>
-          Start time: <%= event.start_time %>
-          End time: <%= event.end_time %>
+        <% if @events.length == 0 %>
+          <p>We are planning events for you in the future, stay tuned!</p>
+        <% else %>
+          <% @events.each do |event| %>
+          <div class="subsection">
+            <h3> <%= event.title %> </h3>
+            <p>
+                <i class="calendar icon"></i> <%= event.start_time.strftime("%B %d, %Y") %>
+                <br/>
+                <i class="clock icon"></i> <%= event.start_time.strftime("%I:%M %p") %>
+                    - <%= event.end_time.strftime("%I:%M %p") %>
+                <br/>
+                <i class="map marker icon"></i> <%= event.location %>
+            </p>
+            <p> <%= event.description %> </p>
+          </div>
+          <% end %>
         <% end %>
       </section>
 
@@ -58,7 +70,10 @@
         <h2> Sponsor Us </h2>
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut iaculis felis, eu rhoncus sapien.
               Maecenas porttitor tempor fringilla. Phasellus sed tempus ante. </p>
-        <a href="" class="button">Get In Touch</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSckJ4OXFHC3yPTvp0HRsGvcciI4scV-JIDWgl26SZbhOQpNjw/viewform?usp=sf_link"
+           target="_blank" class="button">
+          Get In Touch
+        </a>
       </section>
     </div>
   </div>
