--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
+<br />
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="ui centered grid">
+  <div class="fourteen wide column">
+    <div class="ui centered grid">
+      <div class="column" style="max-width: 550px">
+        <h2 class="ui image header">
+          <div class="content uoftcodes-blue-text">
+            Forgot your password?
+          </div>
+        </h2>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'ui large form' }) do |f| %>
+          <% devise_error_messages! %>
+          <div class="ui stacked segment">
+            <div class="field">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            <%= f.submit "Send me reset password instructions", class: 'ui uoftcodes-blue-background fluid large submit button' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
