Change wording in homepage

--- a/app/views/homepage/homepage.html.erb
+++ b/app/views/homepage/homepage.html.erb
@@ -6,9 +6,9 @@
           <div class="content">
               <%= image_tag("pink_logo.svg", alt: "Uoft Codes", class: "logo") %>
               <h1> CONNECTING </h1>
-              <h1> THE CS COMMUNITY</h1>
-              <h1> AT UTORONTO </h1>
-              <p>Anybody with a passion for computer science (engineers, writers, anyone) is welcome</p>
+              <h1> THE CS COMMUNITY </h1>
+              <h1> AT THE UNIVERSITY OF TORONTO </h1>
+              <p>Anybody with a passion for computer science is welcome</p>
           </div>
           <div class="image">
               <%= image_tag("connected_graph.svg") %>
@@ -19,7 +19,7 @@
         <div class="twelve wide column tablet mobile only">
           <div class="content">
             <%= image_tag("pink_logo.svg", alt: "Uoft Codes", class: "logo") %>
-            <h1> CONNECTING THE CS COMMUNITY AT UTORONTO </h1>
+            <h1>CONNECTING THE CS COMMUNITY AT THE UNIVERSITY OF TORONTO</h1>
             <p>Anybody with a passion for computer science (engineers, writers, anyone) is welcome</p>
           </div>
         </div>
@@ -68,8 +68,7 @@
       <section class="sponsor-us">
         <div class="visual-anchor"></div>
         <h2> Sponsor Us </h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut iaculis felis, eu rhoncus sapien.
-              Maecenas porttitor tempor fringilla. Phasellus sed tempus ante. </p>
+        <p> </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSckJ4OXFHC3yPTvp0HRsGvcciI4scV-JIDWgl26SZbhOQpNjw/viewform?usp=sf_link"
            target="_blank" class="button">
           Get In Touch
@@ -87,7 +86,7 @@
         </div>
 
         <div class="qa">
-          <h3> How can I get invovled with Uoft Codes? </h3>
+          <h3> How can I get invovled with UofTCodes? </h3>
           <p> We will be posting applications soon, so stay updated! </p>
         </div>
     </div>
