--- a/app/views/events/_event_modal.html.erb
+++ b/app/views/events/_event_modal.html.erb
@@ -16,6 +16,9 @@
       </div>
       <div class="ui label" id="event_modal_date_label">
       </div>
+      <br /><br />
+      <div class="ui label" id="event_modal_location_label">
+      </div>
       <p id="event_modal_content"></p>
     </div>
   </div>
