--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,98 +6,102 @@
   </script>
 <% end %>
 
-<h2>Settings</h2>
+<div class="ui centered grid">
+  <div class="fourteen wide column">
+    <h2>Settings</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'ui form' }) do |f| %>
-  <% devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'ui form' }) do |f| %>
+      <% devise_error_messages! %>
 
-  <div class="ui top attached tabular menu">
-    <a class="active item" data-tab="basic">Basic</a>
-    <a class="item" data-tab="security">Security</a>
-    <a class="item" data-tab="communications">Communications</a>
-  </div>
+      <div class="ui top attached tabular menu">
+        <a class="active item" data-tab="basic">Basic</a>
+        <a class="item" data-tab="security">Security</a>
+        <a class="item" data-tab="communications">Communications</a>
+      </div>
 
-  <div class="ui bottom attached active tab segment" data-tab="basic">
-    <div class="field">
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name %>
-    </div>
+      <div class="ui bottom attached active tab segment" data-tab="basic">
+        <div class="field">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name %>
+        </div>
 
-    <div class="field">
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
-    </div>
+        <div class="field">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name %>
+        </div>
 
-    <div class="field">
-      <%= f.label :email %>
-      <%= f.email_field :email, autocomplete: "email" %>
-    </div>
+        <div class="field">
+          <%= f.label :email %>
+          <%= f.email_field :email, autocomplete: "email" %>
+        </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <%= link_to "Cancel my account", registration_path(resource_name),  method: :delete,
+          data: { confirm: "Are you sure? You cannot undo this change." }, class: 'ui button red' %>
+
+        <br />
+        <br />
+
+        <div class="actions">
+          <%= f.submit "Update", class: 'ui green button' %>
+        </div>
+      </div>
+      <div class="ui bottom attached tab segment" data-tab="security">
+        <div class="field">
+          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+          <%= f.password_field :password, autocomplete: "new-password" %>
+          <% if @minimum_password_length %>
+            <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+          <%= f.password_field :current_password, autocomplete: "current-password" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Update", class: 'ui green button' %>
+        </div>
+      </div>
+      <div class="ui bottom attached tab segment" data-tab="communications">
+        You are subscribed to receive these emails:
+
+        <br />
+
+        <div class="ui checkbox" data-tooltip="When you register to a new event" data-variation="wide">
+          <%= f.check_box :event_registration_email %>
+          <%= f.label :event_registration_email %>
+        </div>
+
+        <br /><br />
+
+        <div class="ui checkbox" data-tooltip="Reminder of registered upcoming events" data-variation="wide">
+          <%= f.check_box :event_reminder_email %>
+          <%= f.label :event_reminder_email %>
+        </div>
+
+        <br /><br />
+
+        <div class="ui checkbox" data-tooltip="When a new event is added" data-variation="wide">
+          <%= f.check_box :event_creation_email %>
+          <%= f.label :event_creation_email %>
+        </div>
+
+        <br /><br />
+
+        <div class="actions">
+          <%= f.submit "Update", class: 'ui green button' %>
+        </div>
+      </div>
     <% end %>
-
-    <%= link_to "Cancel my account", registration_path(resource_name),  method: :delete,
-      data: { confirm: "Are you sure? You cannot undo this change." }, class: 'ui button red' %>
-
-    <br />
-    <br />
-
-    <div class="actions">
-      <%= f.submit "Update", class: 'ui green button' %>
-    </div>
   </div>
-  <div class="ui bottom attached tab segment" data-tab="security">
-    <div class="field">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-      <% if @minimum_password_length %>
-        <em><%= @minimum_password_length %> characters minimum</em>
-      <% end %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
-      <%= f.password_field :current_password, autocomplete: "current-password" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Update", class: 'ui green button' %>
-    </div>
-  </div>
-  <div class="ui bottom attached tab segment" data-tab="communications">
-    You are subscribed to receive these emails:
-
-    <br />
-
-    <div class="ui checkbox" data-tooltip="When you register to a new event" data-variation="wide">
-      <%= f.check_box :event_registration_email %>
-      <%= f.label :event_registration_email %>
-    </div>
-
-    <br /><br />
-
-    <div class="ui checkbox" data-tooltip="Reminder of registered upcoming events" data-variation="wide">
-      <%= f.check_box :event_reminder_email %>
-      <%= f.label :event_reminder_email %>
-    </div>
-
-    <br /><br />
-
-    <div class="ui checkbox" data-tooltip="When a new event is added" data-variation="wide">
-      <%= f.check_box :event_creation_email %>
-      <%= f.label :event_creation_email %>
-    </div>
-
-    <br /><br />
-
-    <div class="actions">
-      <%= f.submit "Update", class: 'ui green button' %>
-    </div>
-  </div>
-<% end %>
+</div>
