--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Event</h1>
+<div class="ui centered grid">
+  <div class="fourteen wide column">
+    <h1>New Event</h1>
+    <%= render 'form', event: @event %>
 
-<%= render 'form', event: @event %>
-
-<%= link_to 'Back', events_path %>
+    <%= link_to 'Back', events_path %>
+  </div>
+</div>
