--- a/app/views/homepage/homepage.html.erb
+++ b/app/views/homepage/homepage.html.erb
@@ -68,7 +68,10 @@
       <section class="sponsor-us">
         <div class="visual-anchor"></div>
         <h2> Sponsor Us </h2>
-        <p> </p>
+        <p>
+          Reach skilled students and support the CS community. Sponsor UofT Codes. 
+        </p>
+
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSckJ4OXFHC3yPTvp0HRsGvcciI4scV-JIDWgl26SZbhOQpNjw/viewform?usp=sf_link"
            target="_blank" class="button">
           Get In Touch
